2002-02-14  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Add checks to see if we need to link to libsocket,
	libnsl, and/or librt. Also check for inet_pton and inet_aton.

2002-02-13  Jeffrey Stedfast  <fejj@ximian.com>

	* acconfig.h: #undef USE_MONO_MUTEX

	* configure.in: If the system pthread implementation is lacking,
	default to using mono-mutex.

2002-02-05  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/enum2.cs: new file with more enum tests.

2002-02-01  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/jit-long.cs: added some SHL/SHR tests

Fri Feb 1 15:32:36 CET 2002 Paolo Molaro <lupus@ximian.com>

	* configure.in: allow PKG_CONFIG_PATH for the build-platform
	pkg-config invocation.

Fri Feb 1 15:13:25 CET 2002 Paolo Molaro <lupus@ximian.com>

	* configure.in: add some support/fixes for cross-compilation.

2002-01-14  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/exception6.cs: new tests for ADD_OVF, MUL_OVF
	added tests for SUB_OVF, SUB_OVF_UN

2001-12-21  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/Makefile.am (TESTSRC): disabled stream-writer test

2001-12-21  Aaron Weber  <aaron@ximian.com>

	* doc/faq (A): added a linebreak that was missing and was causing
	a heading to appear badly.

2001-12-20  Aaron Weber  <aaron@ximian.com>

	* doc/faq: added <a name=""> nav links, and moved all MSFT-related
	questions into a single section.

2001-12-17  Aaron Weber  <aaron@ximian.com>

	* doc/faq (Q): Question-by-question, line-by-line revision.

2001-12-17  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/time.cs: new test

2001-11-30  Radek Doulik  <rodo@ximian.com>

	* configure.in: remove ACCESS_UNALIGNED="no" from ppc

2001-11-29  Radek Doulik  <rodo@ximian.com>

	* configure.in (ACCESS_UNALIGNED): uncommented and modified
	powerpc-*-linux* 
	generate mono/arch/ppc/Makefile

2001-11-26  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/exception3.cs: modified the test to show a bug in the