@@ -1,5 +1,10 @@
 #undef HAVE_INET_PTON
 #undef HAVE_INET_ATON
+#undef HAVE_SOL_IP
+#undef HAVE_SOL_TCP
+#undef HAVE_IP_PKTINFO
+#undef HAVE_IP_ADD_MEMBERSHIP
+#undef HAVE_IP_DROP_MEMBERSHIP
 #undef HAVE_PTHREAD
 #undef HAVE_PTHREAD_MUTEX_TIMEDLOCK
 #undef USE_MONO_MUTEX
