@@ -1,3 +1,8 @@
+2002-02-16  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* configure.in: Add checks for SOL_IP, SOL_TCP, IP_PKTINFO,
+	IP_ADD_MEMBERSHIP and IP_DROP_MEMBERSHIP.
+
 2002-02-14  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* configure.in: Add checks to see if we need to link to libsocket,
